added tailwind and component architecture

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,19 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@/styles/*": [
+        "./src/styles/*"
+      ],
+      "@/components/*": [
+        "./src/components/*"
+      ],
+      "@/lib/*": [
+        "./src/lib/*"
+      ],
+      "@/ui/*": [
+        "./src/components/ui/*"
+      ],
     },
     "plugins": [
       {
