--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "clsx": "^1.2.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "lucide-react": "^0.125.0",
     "mui": "^0.0.1",
     "next": "13.2.4",
+    "next-themes": "^0.2.1",
+    "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -29,6 +32,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "@tailwindcss/typography": "^0.5.9",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
